Fix to stop clouds covering docs text for narrow screens

--- a/docs/stylesheets/_footer.css
+++ b/docs/stylesheets/_footer.css
@@ -21,3 +21,9 @@
 #cloud-r {
     right: 0;
 }
+
+@media screen and (max-width: 76.1875em) {
+    .footer {
+        height: 6rem;
+    }
+}
